--- a/style.css
+++ b/style.css
@@ -16,3 +16,167 @@
     background-color: rgba(59, 190, 233, 0.63);
     padding: 25px 0;
 }
+
+
+
+/*  About Us Page */
+
+
+
+.paddingTB60 {
+    padding-top:60px;
+    padding-bottom:60px;
+}
+
+.aboutus-banner {
+    background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("https://images.pexels.com/photos/673649/pexels-photo-673649.jpeg");
+    background-color: #232323;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    color: #fff;
+    padding-top: 110px;
+    padding-bottom:110px;
+ }
+ 
+
+.lg-text {
+    font-size:52px;
+    font-weight: 600;
+    text-transform: none;
+    color:#fff;
+}
+.white-text {
+    color:#fff;
+}
+
+
+
+
+ .our-team{
+    background-color: lightgray;
+ }
+
+
+  .team-box {
+      text-align: center;
+      border-bottom: 8px solid #0d47a1;
+      padding-bottom: 15px;
+    background:#1e88e5;
+    box-shadow:0 8px 10px 1px rgba(0,0,0,0.14),0 3px 14px 2px rgba(0,0,0,0.12),0 5px 5px -3px rgba(0,0,0,0.3);
+    transition: all 0.4s ease-in-out 0s;
+  }
+  .team-box:hover{
+    box-shadow:none;
+  }
+  .team-box .img-box {
+      position: relative;
+      overflow: hidden;
+  }
+  .team-shape,
+  .team-box h3,
+  .team-hover-box ul li a {
+      transition: all 0.5s ease 0s;
+  }
+  .team-shape {
+      background-color:#1e88e5;;
+      position: absolute;
+      height: 72px;
+      bottom: 5px;
+      left: 0;
+      right: 0;
+      clip-path: polygon(0% 0%, 0% 100%, 100% 95%, 0% 0%);
+  }
+  .team-box:hover .team-shape {
+      height: 0;
+  }
+  .team-box h3 {
+      font-family: 'Oswald';
+      font-size: 15px;
+      color: #fff;
+    letter-spacing : 1.8px;
+      margin-top: 27px;
+      text-transform: uppercase;
+  }
+  .team-box:hover h3 {
+      color: #0d47a1;
+    letter-spacing : 8px;
+  }
+  .team-box p {
+      color: #fff;
+      letter-spacing: 0.42px;
+  }
+  .team-box .img-box::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.9);
+      display: inline-block;
+      transform: scaleY(0);
+      transform-origin: 0 0 0;
+      transition: all 0.4s ease-in-out 0s;
+      opacity: 0;
+  }
+  .team-box:hover .img-box::before {
+      opacity: 1;
+      transform: scaleY(1);
+      visibility: visible;
+  }
+  .team-hover-box {
+      position: absolute;
+      top: -50%;
+      left: 0;
+      right: 0;
+      transform: translate(0, -50%);
+      padding: 0 28px;
+      transition: all 1s ease 0s;
+  }
+  .team-box:hover .team-hover-box {
+      top: 50%;
+  }
+  .team-hover-box ul {
+      padding-left: 0;
+      margin-bottom: 20px;
+  }
+  .team-hover-box ul,
+  .team-hover-box ul li,
+  .team-hover-box ul li a {
+      display: inline-block;
+  }
+  .team-hover-box ul li a {
+      width: 45px;
+      height: 45px;
+      border-radius: 100%;
+      line-height: 42px;
+      border: 2px solid #fff;
+      color: #fff;
+  }
+  .team-hover-box ul li a:hover {
+      border-color: #e21712;
+      color: #e21712;
+  }
+  .team-hover-box p {
+      color: #fff;
+      font-size: 15px;
+      line-height: 24px;
+      letter-spacing: 0.45px;
+  }
+  /*--------------- media query start -------------------*/
+  @media (max-width: 479px) {
+  
+      .team-section .row > .col-md-4, .team-section .row > .s6 {
+          width: 100%;
+      }
+  }
+  @media (max-width: 991px) {
+  .team-box {
+          max-width: 300px;
+          display: block;
+          margin: 0 auto 30px;
+      }
+  }
+  
+  
